# patchtriage-cli

./: FINAL_REPORT.md  Martin_Coleman_Final_Project_Report.md  README.md  pyproject.toml
corpus/open_source/demo/: diff.json  report.json  report.md  server_v1_features.json  server_v2_features.json
corpus/open_source/results/: diff.json  report.json  report.md
corpus/openssl/demo/: report.md
corpus/sqlite/v3510300/: sqldiff  sqlite3  sqlite3_analyzer  sqlite3_rsync
corpus/yq/results/: diff.json  report.json  report.md  yq-v4.48_features.json  yq-v4.49_features.json
corpus/zstd/results/: diff.json  report.json  report.md  zstd_features.json
examples/: demo_synthetic.py
examples/output/: diff.json  features_v1.json  features_v2.json  report.html  report.md
final_artifacts/jq/: diff.json  report.md
final_artifacts/open_source/: diff.json  diff_triaged.json  report.md
final_artifacts/yq/: report.md
ghidra_scripts/: extract_features.py
patchtriage/: __init__.py  analyzer.py  classify.py  cli.py  console.py  extract.py  llm_explain.py  matcher.py  native.py  normalize.py  report.py  triage.py
patchtriage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: download_corpus_targets.sh
targets/open_source/: diff_triaged.json  features_v1.json  server_v1  server_v1.c  server_v2  server_v2.c
targets/open_source/server_v1_ghidra/server_v1_ghidra.rep/: project.prp
tests/: test_cli.py  test_matcher.py  test_native.py  test_normalize.py  test_report.py  test_triage.py
tmp/jq-real-world/report/: report_triaged.json
(+5 files in other folders)
